--- a/DAY1.html
+++ b/DAY1.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to DAY 1 of Learning <a href="https://youtube.com/playlist?list=PLQEaRBV9gAFsistSzOgnD4cWgFGRVda4X&si=NleBf3N5nbt6GnVK" target="_blank">Web devlopment</a> with <a href="https://www.youtube.com/@CoderArmy9" target="_blank">Coder army</a></h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1pcikNlDB-4?si=faNoPMfCSnHDR0cD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>How Does Internet Work</h2>
 
   <h3>Principle 1: The Need to Share Information</h3>
