--- a/DAY2.html
+++ b/DAY2.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to DAY 2 of Learning <a href="https://youtube.com/playlist?list=PLQEaRBV9gAFsistSzOgnD4cWgFGRVda4X&si=NleBf3N5nbt6GnVK" target="_blank">Web devlopment</a> with <a href="https://www.youtube.com/@CoderArmy9" target="_blank">Coder army</a></h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/GkZN_-HMCJ8?si=7gyVzGM4Dr2WHpBd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>HTML : Hyper Text Markup Language</h2>
     <p>HTML stands for HyperText Markup Language. It is the standard language used to create and structure the content of a webpage.</p>
     <ul>
