--- a/DAY3.html
+++ b/DAY3.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to DAY 3 of Learning <a href="https://youtube.com/playlist?list=PLQEaRBV9gAFsistSzOgnD4cWgFGRVda4X&si=NleBf3N5nbt6GnVK" target="_blank">Web devlopment</a> with <a href="https://www.youtube.com/@CoderArmy9" target="_blank">Coder army</a></h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/AJ4E1zf5tQs?si=UiEia21_91qbQIm9?autoplay=1" title="YouTube video player"  frameborder="0" allow="accelerometer; ?autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p>Today we will Learn about </p>
     <ol>
          <li>Lists (nested, with headings)  </li> 
