--- a/DAY4.html
+++ b/DAY4.html
@@ -7,5 +7,69 @@
 </head>
 <body>
     <h1>Welcome to DAY 4 of Learning <a href="https://youtube.com/playlist?list=PLQEaRBV9gAFsistSzOgnD4cWgFGRVda4X&si=NleBf3N5nbt6GnVK" target="_blank">Web devlopment</a> with <a href="https://www.youtube.com/@CoderArmy9" target="_blank">Coder army</a></h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/k78lNSAB8VY?si=DxDVTuBIwJLx13eT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h2>📁 File Paths in Web Development</h2>
+    <ul>
+        <li><b>Websites are collections of files</b> (HTML, CSS, JS, images, etc.) organized in folders.</li>
+            <li><b>Relative Paths:</b> Used to link files within your own site.</li> <br>
+            <ul>
+                <li><b>Same folder:</b> about.html</li>
+                <li><b>Sub-folder:</b> images/logo.png</li>
+                <li><b>Parent folder:</b> ../images/logo.png</li>
+            </ul> <br>
+
+
+    <li><b>Absolute Paths:</b> Used for external resources (e.g., https://example.com/image.jpg).</li>
+    <li> <b> Security Note:</b> Browsers restrict access to local file systems to prevent malicious attacks.</li>
+    </ul>
+    <br>
+    <hr>
+
+    <h2>HTML Boilerplate</h2>
+    <pre>
+    <code>
+&lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+  &lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+    &lt;title&gt;Document&lt;/title&gt;
+  &lt;/head&gt;
+  &lt;body&gt;&lt;/body&gt;
+&lt;/html&gt;
+</code>
+    </pre>
+
+<ul>
+    <li>Each tag serves a specific purpose for rendering, accessibility, SEO, and mobile responsiveness.</li>
+    <li>Browsers are forgiving, but skipping boilerplate leads to unpredictable behavior (quirks mode, broken characters, poor mobile experience).</li>
+</ul>
+<hr>
+
+<h2>📄 Multipage Websites</h2>
+
+<ul>
+    <li>Break content into multiple pages (e.g., home.html, about.html, contact.html).</li>
+    <li>Use consistent structure and navigation across pages for a cohesive experience.</li>
+</ul>
+<hr>
+
+<h2>📦 HTML Containers</h2>
+<ul>
+    <li> div: Generic block-level container for grouping elements.</li>
+        <p>class vs id:</p>
+        <ul>
+            <li>id: Unique identifier (used once per page).</li>
+            <li>class: Reusable label for styling multiple elements.</li>
+
+        </ul> <br>
+        <li> span tag: Inline container for styling parts of text without breaking layout.</li>
+
+        <hr>
+        
+ <h2>🧱 Semantic Tags</h2>    
+ 
+ <p>header tag, footer tag , main tag: Define meaningful sections of a webpage for better structure and accessibility.</p>
+</ul>
 </body>
 </html>
