--- a/DAY6.html
+++ b/DAY6.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to DAY 6 of Learning <a href="https://youtube.com/playlist?list=PLQEaRBV9gAFsistSzOgnD4cWgFGRVda4X&si=NleBf3N5nbt6GnVK" target="_blank">Web devlopment</a> with <a href="https://www.youtube.com/@CoderArmy9" target="_blank">Coder army</a></h1>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/NGYp1zCBthk?si=SMbGizfpDw-nonqG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>HTML MEDIA & HOSTING With HTML</h2>
 
   <h3>First Principle: The Web is More Than Text and Images</h3>
