added homepage link in all pages

--- a/DAY2.html
+++ b/DAY2.html
@@ -74,6 +74,7 @@
     <h2>8. The Image Tag (&lt;img&gt;)</h2>
     <img src="https://cdn.britannica.com/16/234216-050-C66F8665/beagle-hound-dog.jpg" 
          alt="This is Dog Photo" width="300" height="300">
-
+<br>
+         <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
 </html>
