--- a/DAY3.html
+++ b/DAY3.html
@@ -50,9 +50,9 @@
       </tr>
     </tbody>
   </table>
-</body>
-</html>
+<br>
         
+<a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
    
 </body>
 </html>
