--- a/DAY4.html
+++ b/DAY4.html
@@ -71,5 +71,7 @@
  
  <p>header tag, footer tag , main tag: Define meaningful sections of a webpage for better structure and accessibility.</p>
 </ul>
+<br>
+<a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
 </html>
