--- a/DAY5.html
+++ b/DAY5.html
@@ -161,5 +161,8 @@
       <li><code>placeholder</code> → Shows hint text inside input</li>
     </ul>
   </div>
+
+  <br>
+  <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
 </html>
