--- a/DAY6.html
+++ b/DAY6.html
@@ -236,5 +236,7 @@
     <li>Click Deploy site → Done 🎉</li>
     <p>Every time you push changes to GitHub, Netlify will auto-update.</p>
   </ol>
+  <br>
+  <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
 </html>
