--- a/DAY1.html
+++ b/DAY1.html
@@ -67,5 +67,7 @@
     <li><b>Journey Back:</b> Resolver caches and sends IP to browser</li>
     <li><b>Final Connection:</b> Browser connects to server using IP + Port</li>
   </ol>
+<br>
+  <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
 </html>
