--- a/DAY1.html
+++ b/DAY1.html
@@ -9,6 +9,8 @@
     <h1>Welcome to DAY 1 of Learning <a href="https://youtube.com/playlist?list=PLQEaRBV9gAFsistSzOgnD4cWgFGRVda4X&si=NleBf3N5nbt6GnVK" target="_blank">Web devlopment</a> with <a href="https://www.youtube.com/@CoderArmy9" target="_blank">Coder army</a></h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1pcikNlDB-4?si=faNoPMfCSnHDR0cD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>How Does Internet Work</h2>
+    <img src="https://filipbabic.github.io/assets/images/internet-flow-v1.webp" alt="working of internet image" height="400px" >
+   
 
   <h3>Principle 1: The Need to Share Information</h3>
   <p>The most fundamental truth is that we have information on one computer (A) and we want it to be on another computer (B). 
@@ -67,6 +69,8 @@
     <li><b>Journey Back:</b> Resolver caches and sends IP to browser</li>
     <li><b>Final Connection:</b> Browser connects to server using IP + Port</li>
   </ol>
+
+   <img src="https://lh5.googleusercontent.com/F3kgFZz3SkThYxHigdyRNBAkvLh9sjq5ePpinDoDG-nOMyeUmqGANJq0MGOF2ooRtg0KdD2tCOhV5L-ESl7CSd-tB0E4w8Ummg6aiIDTBpn7DoEu_H7sNJ8LnLcOq19KWAIvGjx9Qo442QChPlZW13o" alt="working of internet with IP" height="400px">
 <br>
   <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
