--- a/DAY3.html
+++ b/DAY3.html
@@ -10,8 +10,11 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/AJ4E1zf5tQs?si=UiEia21_91qbQIm9?autoplay=1" title="YouTube video player"  frameborder="0" allow="accelerometer; ?autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p>Today we will Learn about </p>
     <ol>
-         <li>Lists (nested, with headings)  </li> 
+         <li>Lists (nested with headings)  </li> 
+         <img src="https://i.ytimg.com/vi/h17MW_t2F0k/maxresdefault.jpg" alt="Lists image" height="400px">
          <li>HTML Tables → colspan, rowspan, header, body & footer</li>
+         <img src="https://www.codewithfaraz.com/img/Mastering%20the%20Table%20Tag%20in%20HTML%20A%20Comprehensive%20Guide.jpg" alt="Html table image" height="400px">
+<br>
     </ol> 
     
     <h2 >HTML Quick Revision Table</h2>
@@ -50,7 +53,7 @@
       </tr>
     </tbody>
   </table>
-<br>
+  
         
 <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
    
