--- a/DAY4.html
+++ b/DAY4.html
@@ -16,7 +16,9 @@
                 <li><b>Same folder:</b> about.html</li>
                 <li><b>Sub-folder:</b> images/logo.png</li>
                 <li><b>Parent folder:</b> ../images/logo.png</li>
-            </ul> <br>
+
+            </ul>
+     <img src="image.png" alt="file path image" height="600px" width="200px" >            <br>
 
 
     <li><b>Absolute Paths:</b> Used for external resources (e.g., https://example.com/image.jpg).</li>
