final with flow and images

--- a/DAY2.html
+++ b/DAY2.html
@@ -75,6 +75,15 @@
     <img src="https://cdn.britannica.com/16/234216-050-C66F8665/beagle-hound-dog.jpg" 
          alt="This is Dog Photo" width="300" height="300">
 <br>
-         <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
+        
+        <p>🎉 Well Done! You have successfully completed <b>Day 2</b> 👏🔥</p>
+  <p>💡 Keep going, consistency is the key to success!</p>
+
+  <p>
+    <a href="DAY3.html">👉 Let's Start Day 3</a>
+  </p>
+
+  <br>
+   <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
 </html>
