--- a/DAY3.html
+++ b/DAY3.html
@@ -54,8 +54,17 @@
     </tbody>
   </table>
   
-        
-<a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
+        <br>
+
+
+<p>🎉 Awesome! You have successfully completed <b>Day 3</b> 👏🔥</p>
+  <p>💡 You are halfway through, stay motivated!</p>
+
+  <p>
+    <a href="DAY4.html">👉 Let's Start Day 4</a>
+  </p>
+  <br>
+  <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
    
 </body>
 </html>
