--- a/DAY4.html
+++ b/DAY4.html
@@ -73,7 +73,16 @@
  
  <p>header tag, footer tag , main tag: Define meaningful sections of a webpage for better structure and accessibility.</p>
 </ul>
+<hr>
 <br>
-<a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
+
+ <p>🎉 Great! You have successfully completed <b>Day 4</b> 👏🔥</p>
+  <p>💡 Just two more steps to achieve your goal!</p>
+
+  <p>
+    <a href="DAY5.html">👉 Let's Start Day 5</a>
+  </p>
+  <br>
+  <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
 </html>
