--- a/DAY5.html
+++ b/DAY5.html
@@ -163,6 +163,15 @@
   </div>
 
   <br>
+  
+   <p>🎉 Excellent! You have successfully completed <b>Day 5</b> 👏🔥</p>
+  <p>💡 Tomorrow is your final step, don’t give up now!</p>
+
+  <p>
+    <a href="DAY6.html">👉 Let's Start Day 6</a>
+
+  </p>
+  <br>
   <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
 </html>
