--- a/DAY6.html
+++ b/DAY6.html
@@ -237,6 +237,16 @@
     <p>Every time you push changes to GitHub, Netlify will auto-update.</p>
   </ol>
   <br>
-  <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
+  
+   <p>🎉 Congratulations! You have successfully completed <b>Day 6</b> 👏🔥</p>
+  <p>💡 You did it! Completing 6 days shows your determination and focus.</p>
+
+  <p>🚀 Keep learning, the journey doesn’t end here!</p>
+  
+  <p>
+    <a href="DAY1.html">👉 Let's Start Revising</a>
+  </p>
+  <br>
+   <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
 </html>
