--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Development Course from Zero</title>
+    <title>Welcome to Coder Army Challenge</title>
 </head>
 <body>
     
     <h1>Learn <a href="https://youtube.com/playlist?list=PLQEaRBV9gAFsistSzOgnD4cWgFGRVda4X&si=NleBf3N5nbt6GnVK" target="_blank">Web devlopment</a> with <a href="https://www.youtube.com/@CoderArmy9" target="_blank">Coder army</a></h1>
-    <img src="https://c8.alamy.com/comp/2RC7HCA/web-development-isometric-web-banner-full-stack-development-company-isometry-concept-software-engineering-3d-scene-application-design-and-programmi-2RC7HCA.jpg" alt="web dev image" height="400px" width="400px">
+    <img src="Gemini_Generated_Image_3407fc3407fc3407.png" alt="web dev image" height="400px" ">
+    <h2>🚀 Welcome to the 6-Day Learning Journey!</h2>
+  <p>💡 Every big success starts with small steps.  
+     Today is your chance to begin and grow stronger each day.</p>
+
+     <p>
+    <a href="DAY1.html">👉 Start Day 1</a>
+  </p>
+
     <ul>
     <li><a href="DAY1.html" target="_blank"> <h2>Introduction to Internet</h2> </a></li>
     <li><a href="DAY2.html" target="_blank"> <h2>Introduction to HTML and Basic tags</h2> </a></li>
@@ -19,8 +27,9 @@
     </ul>
 
      <footer>
-        <p>&copy; 2025 Coder Army. All Rights Reserved.</p>
-        <p>Contact us: <a href="mailto:contact@coderarmy.com">contact@coderarmy.com</a></p>
+        <p>&copy; 2025 Raj Tripathi. All Rights Reserved.</p>
+        <p>Contact us: <a href="mailto:rajtripathi0929@gmail.com">rajtripathi0929@gmail.com</a></p>
+        <a href="DAY1.html">👉 Start Day 1</a>
         
     </footer>
 
