--- a/DAY1.html
+++ b/DAY1.html
@@ -72,6 +72,14 @@
 
    <img src="https://lh5.googleusercontent.com/F3kgFZz3SkThYxHigdyRNBAkvLh9sjq5ePpinDoDG-nOMyeUmqGANJq0MGOF2ooRtg0KdD2tCOhV5L-ESl7CSd-tB0E4w8Ummg6aiIDTBpn7DoEu_H7sNJ8LnLcOq19KWAIvGjx9Qo442QChPlZW13o" alt="working of internet with IP" height="400px">
 <br>
-  <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
+ 
+<p>🎉 Congratulations! You have successfully completed <b>Day 1</b> 👏🔥</p>
+  <p>💡 Great start! Learning every day makes you stronger.</p>
+
+  <p>
+    <a href="DAY2.html">👉 Let's Start Day 2</a>
+  </p>
+  <br><br>
+   <a href="index.html" target="_blank" rel="noopener noreferrer"> GO to Home Page</a>
 </body>
 </html>
